update course 1