@@ -3,7 +3,10 @@ package main.advanced.encapsulation;
 import main.advanced.inheritance.Car;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+
+import static java.util.List.copyOf;
 
 public class CarShop {
 
@@ -13,28 +16,59 @@ public class CarShop {
         this.cars = cars;
     }
 
-    public List<Car> getCars() {
-        return cars;
+    public void printCars() {
+        System.out.println(cars);
     }
+
 
     public static void main(String[] args) {
 
         List<Car> carList = new ArrayList<>();
 
-        final Car audi = new Car("Audi", 5, "red", 260);
-        final Car porsche = new Car("Porsche", 2, "orange", 300);
-        final Car ford = new Car("Ford", 5, "green", 160);
+        Car audi = new Car("Audi", 5, "red", 260);
+        Car porsche = new Car("Porsche", 2, "black", 260);
+        Car ford = new Car("Ford", 5, "red", 260);
+      /*  carList.add(audi);
+        carList.add(porsche);*/
 
-        carList.add(audi);
-        carList.add(porsche);
 
-        //CarShop carShop = new CarShop(List.copyOf(carList));
-        CarShop carShop = new CarShop(carList);
+        carList = Arrays.asList(
+                new Car("Audi", 5, "red", 260),
+                new Car("Porsche", 2, "black", 260)
+        );
 
-        System.out.println(carShop.getCars());
 
-        // encapsulation does not mean immutability !!!
+        CarShop carShop = new CarShop(copyOf(carList));
+
+        carShop.printCars();
+
         carList.add(ford);
-        System.out.println(carShop.getCars());
+        porsche.color = "white";
+
+        carShop.printCars();
+
+    }
+
+    public static void main1(String[] args) {
+
+        List<Integer> ints = new ArrayList<>();
+        ints.add(1);
+        ints.add(2);
+        ints.add(4);
+        ints.add(8);
+/*
+
+        for (int i = 0; i < ints.size(); i++) {
+            System.out.println(ints.get(i));
+        }
+
+        for(int i : ints){
+            System.out.println(i);
+        }
+
+*/
+
+        System.out.println(ints);
+
     }
 }
